# nshskill

./: AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: publish.sh
src/nshskill/: __init__.py  _cli.py  cli.py
src/skill_kit/: __init__.py  _cli.py  cli.py  skill.py
src/skill_kit/_skill/: SKILL.md
tests/: test_skill.py
